package masterMind;

public enum Color {
	RED,
	GREEN,
	BLUE,
	YELLOW,
	CYAN,
	MAGENTA
}
